--- a/bestmedia.html
+++ b/bestmedia.html
@@ -6,400 +6,7 @@
   <title>Best Cyberpunk Media – Burnline</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Staff Picks – Burnline</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #0f0f1c, #1b1e35);
-      color: #f0f0f0;
-    }
-    h1, h2, h3, nav a, header {
-      font-family: 'Orbitron', sans-serif;
-    }
-    .site-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #0df6e3;
-      color: #0f0f1c;
-      padding: 1rem 2rem;
-      font-size: 2rem;
-      flex-wrap: wrap;
-    }
-    .logo-title {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      text-decoration: none;
-      color: inherit;
-    }
-    .logo-title img {
-      height: 60px;
-      width: auto;
-    }
-    .site-nav {
-      display: flex;
-      gap: 2rem;
-      font-size: 1rem;
-    }
-    .site-nav a {
-      color: #0f0f1c;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .content {
-      max-width: 1200px;
-      margin: 2rem auto;
-      padding: 0 2rem;
-    }
-    .content h1 {
-      color: #ff4ac2;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-    .filters {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-      margin-bottom: 2rem;
-    }
-    .filters button {
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 4px;
-      background: #0df6e3;
-      color: #0f0f1c;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .filters button.active {
-      background: #ff4ac2;
-      color: #fff;
-    }
-    .story-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 2rem;
-    }
-    .story-card {
-      background-color: #1c1e2f;
-      border-radius: 8px;
-      padding: 1rem;
-      display: none;
-      position: relative;
-      overflow: hidden;
-    }
-    .story-card.active {
-      display: block;
-    }
-    .story-card img {
-      width: 100%;
-      border-radius: 6px;
-      margin-bottom: 1rem;
-    }
-    .story-card h3 {
-      color: #0df6e3;
-      font-size: 1.1rem;
-      margin-bottom: 0.5rem;
-    }
-    .story-card small {
-      color: #777;
-      font-size: 0.8rem;
-    }
-    .card-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(15, 15, 28, 0.85);
-      color: #f0f0f0;
-      padding: 1rem;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      font-size: 0.9rem;
-      line-height: 1.4;
-      overflow-wrap: break-word;
-      word-break: break-word;
-      white-space: normal;
-      box-sizing: border-box;
-    }
-    .card-overlay .overlay-content {
-      max-width: 90%;
-    }
-    .card-overlay a {
-      display: inline-block;
-      margin-top: 1rem;
-      color: #0df6e3;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.2s ease;
-    }
-    .card-overlay a:hover {
-      color: #ff4ac2;
-      text-decoration: underline;
-    }
-    .story-card:hover .card-overlay {
-      opacity: 1;
-    }
-  </style>
-</head>
-<body>
-  <header class="site-header">
-    <a href="index.html" class="logo-title">
-      <img src="Flame logo-1.png.png" alt="Burnline logo">
-      <span>BURNLINE</span>
-    </a>
-    <nav class="site-nav">
-      <a href="index.html">Home</a>
-      <a href="fiction.html">Fiction</a>
-      <a href="art.html">Art</a>
-      <a href="about.html">About</a>
-      <a href="submit.html">Submit</a>
-    </nav>
-  </header>
-
-  <section class="content">
-    <h1>Staff Picks</h1>
-    <div class="filters">
-      <button class="filter-btn" data-filter="games">Games</button>
-      <button class="filter-btn" data-filter="books">Books</button>
-      <button class="filter-btn" data-filter="film">Film and TV</button>
-      <button class="filter-btn" data-filter="other">Other</button>
-    </div>
-    <div class="story-grid" id="picks">
-      <!-- Games -->
-      <div class="story-card" data-category="games">
-        <img src="CS Keyart.png">
-        <h3>Citizen Sleeper</h3>
-        <small>Jump Over the Age / Fellow Traveller</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.
-            <a href="https://store.steampowered.com/app/1578650/Citizen_Sleeper/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="games">
-        <img src="Ruiner Keyart.jpg">
-        <h3>Ruiner</h3>
-        <small>Reikon Games</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
-            <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="games">
-        <img src="Ghostrunner Keyart.jpg">
-        <h3>Ghostrunner</h3>
-        <small>One More Level</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Like the sword parts of cyberpunk? Place this game.
-            <a href="https://store.steampowered.com/app/1139900/Ghostrunner/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="games">
-        <img src="CP2077 Keyart.jpg">
-        <h3>Cyberpunk 2077</h3>
-        <small>CD Projekt Red</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            We'd love to have a clickier take, but it really is as good as advertised. We'd also imagine you wouldn't be on this website without already having played this game.
-            <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="games">
-        <img src="Cloudpunk Keyart.jpg">
-        <h3>Cloudpunk</h3>
-        <small>ION Lands</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Live out your cyberpunk delivery boy fantasy. Something about pixel art and neon works really, really well, too.
-            <a href="https://store.steampowered.com/app/746850/Cloudpunk/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="games">
-        <img src="Transistor Keyart.jpg">
-        <h3>Transistor</h3>
-        <small>Supergiant Games</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            You like Hades? Great news: those folks made a cyberpunk game.
-            <a href="https://store.steampowered.com/app/237930/Transistor/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="games">
-        <img src="FC3 Blood Dragon.jpg">
-        <h3>Far Cry 3: Blood Dragon</h3>
-        <small>Ubisoft</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.
-            <a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Books -->
-      <div class="story-card" data-category="books">
-        <img src="Neuromancer.png">
-        <h3>Neuromancer</h3>
-        <small>William Gibson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            If you're here and you haven't read this book yet, why? This is the one. Don't overthink it.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="books">
-        <img src="Mirrorshades.jpg">
-        <h3>Mirrorshades</h3>
-        <small>Edited by Bruce Sterling</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            An anthology that defined the cyberpunk movement.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="books">
-        <img src="Pattern Recognition.jpg">
-        <h3>Pattern Recognition</h3>
-        <small>William Gibson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A post-9/11 exploration of identity, branding, and connection.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="books">
-        <img src="Cryptonomicon.jpg">
-        <h3>Cryptonomicon</h3>
-        <small>Neal Stephenson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A sprawling tale of code, war, and information age power.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-      <div class="story-card" data-category="books">
-        <img src="Synners.jpg">
-        <h3>Synners</h3>
-        <small>Pat Cadigan</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A prescient look at digital identity and networked consciousness.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-      <!-- Film and TV -->
-      <div class="story-card" data-category="film">
-        <img src="CP Edgerunners.jpg">
-        <h3>Cyberpunk Edgerunners</h3>
-        <small>Studio Trigger / CD Projekt</small>
-        <div class="card-overlay">
-          <div class="overlay-content">An anime spinoff of Cyberpunk 2077 with heart and style.</div>
-        </div>
-      </div>
-      <div class="story-card" data-category="film">
-        <img src="Ghost in the Shell.jpg">
-        <h3>Ghost in the Shell</h3>
-        <small>Mamoru Oshii</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A philosophical dive into cybernetic identity.</div>
-        </div>
-      </div>
-      <div class="story-card" data-category="film">
-        <img src="PLUTO.jpg">
-        <h3>PLUTO</h3>
-        <small>Naoki Urasawa / Netflix</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A noir robot drama reimagining Astro Boy's greatest story arc.</div>
-        </div>
-      </div>
-
-      <!-- Other -->
-      <div class="story-card" data-category="other">
-        <img src="Neon Rising.png">
-        <h3>Neon_Rising</h3>
-        <small>The_Future_is_Now</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A cyberpunk narrative art book blending visuals and lore.</div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <script>
-    const buttons = document.querySelectorAll('.filter-btn');
-    const cards = document.querySelectorAll('.story-card');
-
-    function filterCategory(category) {
-      buttons.forEach(btn => {
-        btn.classList.toggle('active', btn.getAttribute('data-filter') === category);
-      });
-
-      cards.forEach(card => {
-        card.classList.remove('active');
-        if (card.getAttribute('data-category') === category) {
-          card.classList.add('active');
-        }
-      });
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      filterCategory('games');
-    });
-
-    buttons.forEach(button => {
-      button.addEventListener('click', () => {
-        const category = button.getAttribute('data-filter');
-        filterCategory(category);
-      });
-    });
-  </script>
-</body>
-</html>
-
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -630,14 +237,14 @@
       mediaItems.forEach((item, index) => {
         const container = document.createElement('div');
         container.className = 'media-item';
-        container.innerHTML = 
+        container.innerHTML = `
           <div class="media-title">${item.title}</div>
           <div class="vote-buttons">
             <button class="upvote" data-index="${index}">▲</button>
             <span>${item.votes}</span>
             <button class="downvote" data-index="${index}">▼</button>
           </div>
-        ;
+        `;
         mediaList.appendChild(container);
       });
 
