--- a/art.html
+++ b/art.html
@@ -136,19 +136,30 @@
     }
 
     .gallery-slide {
-      flex: 0 0 80%;
+      flex: 0 0 60%;
       scroll-snap-align: center;
       border-radius: 12px;
       overflow: hidden;
-      transition: transform 0.3s ease;
+      position: relative;
     }
 
     .gallery-slide img {
       width: 100%;
       height: auto;
-      object-fit: cover;
+      object-fit: contain;
       display: block;
       border-radius: 12px;
+    }
+
+    .slide-caption {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: linear-gradient(to top, rgba(15,15,28,0.8), rgba(15,15,28,0));
+      color: #0df6e3;
+      padding: 1rem;
+      box-sizing: border-box;
     }
 
     .scroll-arrow {
@@ -175,96 +186,12 @@
     .scroll-arrow:hover {
       color: #ff4ac2;
     }
-
-    footer {
-      background: #0f0f1c;
-      padding: 4rem 2rem 2rem;
-      color: #aaa;
-      font-size: 0.9rem;
-    }
-
-    footer a:hover {
-      color: #0df6e3;
-    }
-
-    .footer-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 3rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .footer-column {
-      flex: 1 1 250px;
-      min-width: 200px;
-    }
-
-    .footer-logo {
-      height: 100px;
-      margin-bottom: 1rem;
-    }
-
-    .footer-bottom {
-      text-align: center;
-      margin-top: 3rem;
-      border-top: 1px solid #222;
-      padding-top: 1rem;
-      color: #555;
-    }
-
-    .newsletter-input {
-      padding: 0.6rem 1rem;
-      border-radius: 4px;
-      border: none;
-      width: 70%;
-      margin-bottom: 0.8rem;
-    }
-
-    .newsletter-button {
-      padding: 0.6rem 1.2rem;
-      background-color: #0df6e3;
-      color: #0f0f1c;
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .gradient-blue-text {
-      background: linear-gradient(90deg, #0df6e3, #56ccf2);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      color: transparent;
-      font-weight: bold;
-    }
   </style>
 </head>
 <body>
-
-  <header class="site-header">
-    <a href="index.html" class="logo-title">
-      <img src="Flame logo-1.png.png" alt="Burnline logo">
-      <span>BURNLINE</span>
-    </a>
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Fiction</a>
-      <a href="art.html">Art</a>
-      <a href="about.html">About</a>
-      <a href="submit.html">Submit</a>
-    </nav>
-  </header>
-
   <section class="gallery-hero">
     <h1>Featured Cyberpunk Art</h1>
-    <p>Interested in having your art featured in the next issue? 
+    <p>Interested in having your art featured in the next issue?
       <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
     </p>
   </section>
@@ -272,46 +199,19 @@
   <section class="horizontal-gallery-container">
     <button class="scroll-arrow left" onclick="scrollGallery(-1)">&#10094;</button>
     <div class="horizontal-gallery" id="scrollGallery">
-      <div class="gallery-slide"><img src="CBA6.jpg" alt="Art 1"></div>
-      <div class="gallery-slide"><img src="CBA5.jpg" alt="Art 2"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 1.png" alt="Art 3"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 2.png" alt="Art 4"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 3.png" alt="Art 5"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 4.png" alt="Art 6"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 5.png" alt="Art 7"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 6.png" alt="Art 8"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 7.png" alt="Art 9"></div>
-      <div class="gallery-slide"><img src="Placeholder Image 8.png" alt="Art 10"></div>
+      <div class="gallery-slide"><img src="CBA6.jpg" alt="Art 1"><div class="slide-caption">Art 1 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="CBA5.jpg" alt="Art 2"><div class="slide-caption">Art 2 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 1.png" alt="Art 3"><div class="slide-caption">Art 3 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 2.png" alt="Art 4"><div class="slide-caption">Art 4 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 3.png" alt="Art 5"><div class="slide-caption">Art 5 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 4.png" alt="Art 6"><div class="slide-caption">Art 6 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 5.png" alt="Art 7"><div class="slide-caption">Art 7 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 6.png" alt="Art 8"><div class="slide-caption">Art 8 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 7.png" alt="Art 9"><div class="slide-caption">Art 9 – Artist Name</div></div>
+      <div class="gallery-slide"><img src="Placeholder Image 8.png" alt="Art 10"><div class="slide-caption">Art 10 – Artist Name</div></div>
     </div>
     <button class="scroll-arrow right" onclick="scrollGallery(1)">&#10095;</button>
   </section>
-
-  <footer>
-    <div class="footer-container">
-      <div class="footer-column">
-        <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
-        <form style="margin-top: 1rem;">
-          <input type="email" placeholder="Email Address" class="newsletter-input">
-          <br>
-          <button type="submit" class="newsletter-button">Subscribe</button>
-        </form>
-      </div>
-      <div class="footer-column">
-        <h4 style="color: #0df6e3;">Get In Touch</h4>
-        <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
-      </div>
-      <div class="footer-column">
-        <h4 style="color: #0df6e3;">Read</h4>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      &copy; 2025 Burnline Magazine — All rights reserved
-    </div>
-  </footer>
 
   <script>
     let currentSlide = 0;
@@ -327,10 +227,17 @@
       });
     }
 
-    function toggleMenu() {
-      const nav = document.getElementById('site-nav');
-      nav.classList.toggle('active');
-    }
+    window.addEventListener('load', () => {
+      gallery.scrollTo({
+        left: slides[0].offsetLeft - gallery.offsetLeft,
+        behavior: 'smooth'
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'ArrowRight') scrollGallery(1);
+      if (e.key === 'ArrowLeft') scrollGallery(-1);
+    });
   </script>
 </body>
 </html>
