--- a/art.html
+++ b/art.html
@@ -119,50 +119,89 @@
       margin: auto;
     }
 
-    .horizontal-gallery-container {
-      position: relative;
-      padding: 3rem 0;
-      overflow: hidden;
-    }
-
-    .horizontal-gallery {
-      display: flex;
-      overflow-x: scroll;
-      scroll-behavior: smooth;
-      scroll-snap-type: x mandatory;
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
-      padding: 0 5%;
-      scroll-padding: 0 5%;
+      padding: 3rem 2rem;
     }
 
-    .gallery-slide {
-      flex: 0 0 60%;
-      scroll-snap-align: center;
-      border-radius: 12px;
+    .art-tile {
+      background: #1a1c30;
+      border-radius: 10px;
       overflow: hidden;
-      position: relative;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
     }
 
-    .gallery-slide img {
+    .art-tile:hover {
+      transform: scale(1.02);
+      box-shadow: 0 0 25px rgba(13, 246, 227, 0.15);
+    }
+
+    .art-tile img {
       width: 100%;
-      height: auto;
-      object-fit: contain;
+      height: 300px;
+      object-fit: cover;
       display: block;
-      border-radius: 12px;
     }
 
-    .slide-caption {
-      position: absolute;
-      bottom: 0;
+    .modal {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      opacity: 0;
+      visibility: hidden;
+      position: fixed;
+      z-index: 999;
       left: 0;
+      top: 0;
       width: 100%;
-      background: linear-gradient(to top, rgba(15,15,28,0.8), rgba(15,15,28,0));
-      color: #0df6e3;
-      padding: 1rem;
-      box-sizing: border-box;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      transition: opacity 0.4s ease, transform 0.3s ease;
     }
 
-    .scroll-arrow {
+    .modal.show {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    .modal-content {
+      max-width: 90%;
+      max-height: 80vh;
+      border-radius: 10px;
+      box-shadow: 0 0 30px rgba(13, 246, 227, 0.2);
+      transition: transform 0.3s ease;
+    }
+
+    .close {
+      position: absolute;
+      top: 20px;
+      right: 35px;
+      color: #0df6e3;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .modal-caption {
+      color: #ccc;
+      margin-top: 1rem;
+      text-align: center;
+    }
+
+    .modal-caption h3 {
+      margin: 0;
+      color: #0df6e3;
+    }
+
+    .modal-caption p {
+      margin: 0.5rem 0 0;
+    }
+
+    .nav-arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
@@ -172,72 +211,218 @@
       border: none;
       cursor: pointer;
       z-index: 1000;
-      padding: 0 1rem;
     }
 
-    .scroll-arrow.left {
-      left: 0;
+    .nav-arrow.left {
+      left: 2%;
     }
 
-    .scroll-arrow.right {
-      right: 0;
+    .nav-arrow.right {
+      right: 2%;
     }
 
-    .scroll-arrow:hover {
-      color: #ff4ac2;
+    footer {
+      background: #0f0f1c;
+      padding: 4rem 2rem 2rem;
+      color: #aaa;
+      font-size: 0.9rem;
     }
+
+    footer a:hover {
+      color: #0df6e3;
+    }
+
+    .footer-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 3rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .footer-column {
+      flex: 1 1 250px;
+      min-width: 200px;
+    }
+
+    .footer-logo {
+      height: 100px;
+      margin-bottom: 1rem;
+    }
+
+    .footer-bottom {
+      text-align: center;
+      margin-top: 3rem;
+      border-top: 1px solid #222;
+      padding-top: 1rem;
+      color: #555;
+    }
+
+    .newsletter-input {
+      padding: 0.6rem 1rem;
+      border-radius: 4px;
+      border: none;
+      width: 70%;
+      margin-bottom: 0.8rem;
+    }
+
+    .newsletter-button {
+      padding: 0.6rem 1.2rem;
+      background-color: #0df6e3;
+      color: #0f0f1c;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .gradient-blue-text {
+  background: linear-gradient(90deg, #0df6e3, #56ccf2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  font-weight: bold;
+}
   </style>
 </head>
 <body>
+
+  <header class="site-header">
+    <a href="index.html" class="logo-title">
+      <img src="Flame logo-1.png.png" alt="Burnline logo">
+      <span>BURNLINE</span>
+    </a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="site-nav" id="site-nav">
+      <a href="fiction.html">Fiction</a>
+      <a href="art.html">Art</a>
+      <a href="about.html">About</a>
+      <a href="submit.html">Submit</a>
+    </nav>
+  </header>
+
   <section class="gallery-hero">
     <h1>Featured Cyberpunk Art</h1>
-    <p>Interested in having your art featured in the next issue?
-      <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
-    </p>
+<p>Interested in having your art featured in the next issue? 
+  <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
+</p>
   </section>
 
-  <section class="horizontal-gallery-container">
-    <button class="scroll-arrow left" onclick="scrollGallery(-1)">&#10094;</button>
-    <div class="horizontal-gallery" id="scrollGallery">
-      <div class="gallery-slide"><img src="CBA6.jpg" alt="Art 1"><div class="slide-caption">Art 1 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="CBA5.jpg" alt="Art 2"><div class="slide-caption">Art 2 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 1.png" alt="Art 3"><div class="slide-caption">Art 3 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 2.png" alt="Art 4"><div class="slide-caption">Art 4 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 3.png" alt="Art 5"><div class="slide-caption">Art 5 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 4.png" alt="Art 6"><div class="slide-caption">Art 6 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 5.png" alt="Art 7"><div class="slide-caption">Art 7 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 6.png" alt="Art 8"><div class="slide-caption">Art 8 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 7.png" alt="Art 9"><div class="slide-caption">Art 9 – Artist Name</div></div>
-      <div class="gallery-slide"><img src="Placeholder Image 8.png" alt="Art 10"><div class="slide-caption">Art 10 – Artist Name</div></div>
+  <section class="gallery-grid" id="artGrid">
+    <!-- Tiles (each must include data-title and data-artist) -->
+        <div class="art-tile" onclick="openModal(0)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="CBA6.jpg" alt="Art 1">
     </div>
-    <button class="scroll-arrow right" onclick="scrollGallery(1)">&#10095;</button>
+        <div class="art-tile" onclick="openModal(1)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="CBA5.jpg" alt="Art 1">
+    </div>
+    <div class="art-tile" onclick="openModal(2)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 1.png" alt="Art 1">
+    </div>
+    <div class="art-tile" onclick="openModal(3)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 2.png" alt="Art 2">
+    </div>
+    <div class="art-tile" onclick="openModal(4)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 3.png" alt="Art 3">
+    </div>
+    <div class="art-tile" onclick="openModal(5)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 4.png" alt="Art 4">
+    </div>
+    <div class="art-tile" onclick="openModal(6)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 5.png" alt="Art 5">
+    </div>
+    <div class="art-tile" onclick="openModal(7)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 6.png" alt="Art 6">
+    </div>
+    <div class="art-tile" onclick="openModal(8)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 7.png" alt="Art 7">
+    </div>
+    <div class="art-tile" onclick="openModal(9)" data-title="Title or short description here" data-artist="Artist Name Here">
+      <img src="Placeholder Image 8.png" alt="Art 8">
+    </div>
   </section>
+
+  <!-- Modal -->
+  <div id="imageModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <button class="nav-arrow left" onclick="changeSlide(-1)">&#10094;</button>
+    <img class="modal-content" id="modalImage" alt="Expanded artwork">
+    <button class="nav-arrow right" onclick="changeSlide(1)">&#10095;</button>
+    <div class="modal-caption">
+      <h3 id="modalTitle"></h3>
+      <p id="modalArtist"></p>
+    </div>
+  </div>
+
+  <footer>
+    <div class="footer-container">
+      <div class="footer-column">
+        <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
+        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
+        <form style="margin-top: 1rem;">
+          <input type="email" placeholder="Email Address" class="newsletter-input">
+          <br>
+          <button type="submit" class="newsletter-button">Subscribe</button>
+        </form>
+      </div>
+      <div class="footer-column">
+        <h4 style="color: #0df6e3;">Get In Touch</h4>
+        <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
+      </div>
+      <div class="footer-column">
+        <h4 style="color: #0df6e3;">Read</h4>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; 2025 Burnline Magazine — All rights reserved
+    </div>
+  </footer>
 
   <script>
-    let currentSlide = 0;
-    const gallery = document.getElementById('scrollGallery');
-    const slides = document.querySelectorAll('.gallery-slide');
+    let currentIndex = 0;
+    const modal = document.getElementById('imageModal');
+    const modalImg = document.getElementById('modalImage');
+    const modalTitle = document.getElementById('modalTitle');
+    const modalArtist = document.getElementById('modalArtist');
+    const tiles = document.querySelectorAll('.art-tile');
 
-    function scrollGallery(direction) {
-      currentSlide = (currentSlide + direction + slides.length) % slides.length;
-      const slide = slides[currentSlide];
-      gallery.scrollTo({
-        left: slide.offsetLeft - gallery.offsetLeft,
-        behavior: 'smooth'
-      });
+    function openModal(index) {
+      currentIndex = index;
+      const tile = tiles[index];
+      modal.classList.add('show');
+      modalImg.src = tile.querySelector('img').src;
+      modalTitle.textContent = tile.dataset.title || '';
+      modalArtist.textContent = tile.dataset.artist || '';
     }
 
-    window.addEventListener('load', () => {
-      gallery.scrollTo({
-        left: slides[0].offsetLeft - gallery.offsetLeft,
-        behavior: 'smooth'
-      });
+    function closeModal() {
+      modal.classList.remove('show');
+    }
+
+    function changeSlide(direction) {
+      currentIndex = (currentIndex + direction + tiles.length) % tiles.length;
+      openModal(currentIndex);
+    }
+
+    document.addEventListener('keydown', function(e) {
+      if (!modal.classList.contains('show')) return;
+      if (e.key === 'ArrowRight') changeSlide(1);
+      if (e.key === 'ArrowLeft') changeSlide(-1);
+      if (e.key === 'Escape') closeModal();
     });
 
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'ArrowRight') scrollGallery(1);
-      if (e.key === 'ArrowLeft') scrollGallery(-1);
-    });
+    function toggleMenu() {
+      const nav = document.getElementById('site-nav');
+      nav.classList.toggle('active');
+    }
   </script>
 </body>
 </html>
