--- a/submit.html
+++ b/submit.html
@@ -199,10 +199,39 @@
     </nav>
   </header>
 
-  <section class="content">
-    <h1 class="gradient-heading">Page still under construction</h1>
-    <p>Thanks for checking out our submissions page. We’re almost ready to start accepting your weird shitty creations. Check back soon.</p>
-  </section>
+<section class="content">
+  <h1 class="gradient-heading">Submit to Burnline</h1>
+  <p>We're looking for fiction and artwork that pulses with cyberpunk energy. Burnline is a new publication, run by people who love the genre and want to see it evolve. If you've created something bold, strange, gritty, or just plain cool—send it our way.</p>
+
+  <h2 style="margin-top: 3rem;">Fiction Submissions</h2>
+  <p>We pay <strong>$50 USD</strong> per accepted piece. It’s our goal to grow Burnline into a publication that can pay a competitive per-word rate—but we’re not quite there yet. We want to be transparent with contributors while we build something worth supporting.</p>
+
+  <p><strong>Word count:</strong> 500 – 10,000 words</p>
+  <p><strong>Submit by:</strong> Emailing your story as a .doc, .docx, or .pdf to <a href="mailto:submissions@burnline.net" style="color: #0df6e3;">submissions@burnline.net</a></p>
+
+  <p><strong>No AI-generated or AI-assisted work will be accepted.</strong> We only want human-created fiction—your voice, your ideas, your originality.</p>
+
+  <h3 style="margin-top: 2rem;">What We’re Looking For</h3>
+  <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. Some elements we tend to love:</p>
+  <ul style="text-align: left; max-width: 700px; margin: 0 auto 1rem;">
+    <li>Near-future worlds with corporate control or state surveillance</li>
+    <li>Characters altered by technology—implants, drugs, code, or otherwise</li>
+    <li>Decaying cities, rogue AIs, neon-drenched atmospheres</li>
+    <li>Resistance, rebellion, hackers, grief, and dreams</li>
+  </ul>
+  <p style="margin-top: -0.5rem;">That said, genre is a slippery thing. If your piece is strange, experimental, or sits on the edge of cyberpunk, send it anyway. If it moves us, we’ll publish it.</p>
+
+  <h2 style="margin-top: 3rem;">Art Submissions</h2>
+  <p>We’re also accepting cyberpunk-themed visual art for digital publication. This includes illustration, digital collage, animation stills, photography, and glitch art—anything that contributes to a speculative aesthetic grounded in mood, message, or madness.</p>
+
+  <p><strong>Submit by:</strong> Emailing <a href="mailto:submissions@burnline.net" style="color: #0df6e3;">submissions@burnline.net</a> with a link or attachment of your work (JPG, PNG, or a link to your portfolio or file share).</p>
+
+  <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
+
+  <h3 style="margin-top: 2rem;">A Note on Cover Letters</h3>
+  <p>Emails and cover letters are <em>far less important</em> to us than your fiction or artwork. If a part of your personal story contributes to what you've made, we’d love to hear about it—but otherwise, keep it simple. We're here for the work itself.</p>
+</section>
+
 
   <footer>
     <div class="footer-container">
