--- a/submit.html
+++ b/submit.html
@@ -203,33 +203,60 @@
   <h1 class="gradient-heading">Submit to Burnline</h1>
   <p>We're looking for fiction and artwork that pulses with cyberpunk energy. Burnline is a new publication, run by people who love the genre and want to see it evolve. If you've created something bold, strange, gritty, or just plain cool—send it our way.</p>
 
-  <h2 style="margin-top: 3rem;">Fiction Submissions</h2>
-  <p>We pay <strong>$50 USD</strong> per accepted piece. It’s our goal to grow Burnline into a publication that can pay a competitive per-word rate—but we’re not quite there yet. We want to be transparent with contributors while we build something worth supporting.</p>
+  <!-- Tabs -->
+  <div style="margin: 2rem 0;">
+    <a href="#fiction" style="margin-right: 2rem; color: #0df6e3; font-weight: bold; text-decoration: none;">Fiction Guidelines</a>
+    <a href="#art" style="color: #0df6e3; font-weight: bold; text-decoration: none;">Art Guidelines</a>
+  </div>
 
-  <p><strong>Word count:</strong> 500 – 10,000 words</p>
-  <p><strong>Submit by:</strong> Emailing your story as a .doc, .docx, or .pdf to <a href="mailto:submissions@burnline.net" style="color: #0df6e3;">submissions@burnline.net</a></p>
+  <!-- Fiction Guidelines Section -->
+  <div id="fiction" style="text-align: left;">
+    <h2 style="margin-top: 3rem;">Fiction Guidelines</h2>
 
-  <p><strong>No AI-generated or AI-assisted work will be accepted.</strong> We only want human-created fiction—your voice, your ideas, your originality.</p>
+    <h3 style="margin-bottom: 1rem;">What We're Looking For</h3>
+    <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. Some elements we tend to love:</p>
+    <ul style="max-width: 700px; margin: 0 0 1.5rem 1.5rem;">
+      <li>Near-future worlds with corporate control or state surveillance</li>
+      <li>Characters altered by technology—implants, drugs, code, or otherwise</li>
+      <li>Decaying cities, rogue AIs, neon-drenched atmospheres</li>
+      <li>Resistance, rebellion, hackers, grief, and dreams</li>
+    </ul>
+    <p style="margin-top: -0.5rem;">That said, genre is a slippery thing. If your piece is strange, experimental, or sits on the edge of cyberpunk, send it anyway. If it moves us, we’ll publish it.</p>
+    <p><strong>Above all, we care about character.</strong> We want people who make us feel something—who love, lose, rage, and remember—while navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work.</p>
 
-  <h3 style="margin-top: 2rem;">What We’re Looking For</h3>
-  <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. Some elements we tend to love:</p>
-  <ul style="text-align: left; max-width: 700px; margin: 0 auto 1rem;">
-    <li>Near-future worlds with corporate control or state surveillance</li>
-    <li>Characters altered by technology—implants, drugs, code, or otherwise</li>
-    <li>Decaying cities, rogue AIs, neon-drenched atmospheres</li>
-    <li>Resistance, rebellion, hackers, grief, and dreams</li>
-  </ul>
-  <p style="margin-top: -0.5rem;">That said, genre is a slippery thing. If your piece is strange, experimental, or sits on the edge of cyberpunk, send it anyway. If it moves us, we’ll publish it.</p>
+    <!-- Info Table -->
+    <table style="width: 100%; border-collapse: collapse; margin-top: 2rem; max-width: 700px;">
+      <tr>
+        <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Word Limit</td>
+        <td style="padding: 0.5rem;">500 – 10,000 words</td>
+      </tr>
+      <tr style="background-color: #1b1e35;">
+        <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">Pay Rate</td>
+        <td style="padding: 0.5rem;">$50 USD per accepted piece. It’s our goal to eventually pay a competitive per-word rate, but we’re not quite there yet.</td>
+      </tr>
+      <tr>
+        <td style="padding: 0.5rem; font-weight: bold; vertical-align: top;">How to Submit</td>
+        <td style="padding: 0.5rem;">Email your story as a .doc, .docx, or .pdf to <a href="mailto:contact@burnline.net" style="color: #0df6e3;">contact@burnline.net</a>. Please include the word <strong>"Submission"</strong> in the subject line.</td>
+      </tr>
+    </table>
 
-  <h2 style="margin-top: 3rem;">Art Submissions</h2>
-  <p>We’re also accepting cyberpunk-themed visual art for digital publication. This includes illustration, digital collage, animation stills, photography, and glitch art—anything that contributes to a speculative aesthetic grounded in mood, message, or madness.</p>
+    <p style="margin-top: 1.5rem;"><strong>No AI-generated or AI-assisted work will be accepted.</strong> We only want human-created fiction—your voice, your ideas, your originality.</p>
+  </div>
 
-  <p><strong>Submit by:</strong> Emailing <a href="mailto:submissions@burnline.net" style="color: #0df6e3;">submissions@burnline.net</a> with a link or attachment of your work (JPG, PNG, or a link to your portfolio or file share).</p>
+  <!-- Art Guidelines Section -->
+  <div id="art" style="text-align: left;">
+    <h2 style="margin-top: 4rem;">Art Guidelines</h2>
+    <p>We’re accepting cyberpunk-themed visual art for digital publication. This includes illustration, digital collage, photography, animation stills, glitch art, or anything else that fits the tone of Burnline. We care more about the vibe than the medium.</p>
 
-  <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
+    <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnline.net" style="color: #0df6e3;">contact@burnline.net</a> with your artwork attached (JPG or PNG) or linked via portfolio or file share. Please include the word <strong>"Submission"</strong> in the subject line.</p>
 
-  <h3 style="margin-top: 2rem;">A Note on Cover Letters</h3>
-  <p>Emails and cover letters are <em>far less important</em> to us than your fiction or artwork. If a part of your personal story contributes to what you've made, we’d love to hear about it—but otherwise, keep it simple. We're here for the work itself.</p>
+    <p><strong>No AI-generated or AI-assisted work will be accepted.</strong></p>
+  </div>
+
+  <div style="text-align: left; margin-top: 3rem;">
+    <h3>A Note on Cover Letters</h3>
+    <p>Emails and cover letters are <em>much less important</em> to us than your fiction or artwork. If a part of your personal story contributes to what you've made, we’d love to hear about it—but otherwise, keep it simple. We're here for the work itself.</p>
+  </div>
 </section>
 
 
