--- a/submit.html
+++ b/submit.html
@@ -211,7 +211,7 @@
 
   <!-- Fiction Guidelines Section -->
   <div id="fiction" style="text-align: left;">
-    <h2 style="margin-top: 3rem;">Fiction Guidelines</h2>
+ <h2 id="fiction" class="gradient-heading" style="margin-top: 3rem;">Fiction Guidelines</h2>
 
     <h3 style="margin-bottom: 1rem;">What We're Looking For</h3>
     <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. Some elements we tend to love:</p>
@@ -245,7 +245,7 @@
 
   <!-- Art Guidelines Section -->
   <div id="art" style="text-align: left;">
-    <h2 style="margin-top: 4rem;">Art Guidelines</h2>
+<h2 id="art" class="gradient-heading" style="margin-top: 4rem;">Art Guidelines</h2>
     <p>We’re accepting cyberpunk-themed visual art for digital publication. This includes illustration, digital collage, photography, animation stills, glitch art, or anything else that fits the tone of Burnline. We care more about the vibe than the medium.</p>
 
     <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnline.net" style="color: #0df6e3;">contact@burnline.net</a> with your artwork attached (JPG or PNG) or linked via portfolio or file share. Please include the word <strong>"Submission"</strong> in the subject line.</p>
