--- a/submit.html
+++ b/submit.html
@@ -201,7 +201,7 @@
 
 <section class="content">
   <h1 class="gradient-heading">Submit to Burnline</h1>
-  <p>We're looking for fiction and artwork that pulses with cyberpunk energy. Burnline is a new publication, run by people who love the genre and want to see it evolve. If you've created something bold, strange, gritty, or just plain cool—send it our way.</p>
+  <p>Burnline is a new publication run by people who love the genre and want to see it evolve. We're currently open for short fiction and art submissions. If you've created something bold, strange, gritty, or just plain cool—send it our way.</p>
 
   <!-- Tabs -->
   <div style="margin: 2rem 0;">
@@ -212,17 +212,8 @@
   <!-- Fiction Guidelines Section -->
   <div id="fiction" style="text-align: left;">
  <h2 id="fiction" class="gradient-heading" style="margin-top: 3rem;">Fiction Guidelines</h2>
-
-    <h3 style="margin-bottom: 1rem;">What We're Looking For</h3>
-    <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. Some elements we tend to love:</p>
-    <ul style="max-width: 700px; margin: 0 0 1.5rem 1.5rem;">
-      <li>Near-future worlds with corporate control or state surveillance</li>
-      <li>Characters altered by technology—implants, drugs, code, or otherwise</li>
-      <li>Decaying cities, rogue AIs, neon-drenched atmospheres</li>
-      <li>Resistance, rebellion, hackers, grief, and dreams</li>
-    </ul>
+    <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. We're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work.</p>
     <p style="margin-top: -0.5rem;">That said, genre is a slippery thing. If your piece is strange, experimental, or sits on the edge of cyberpunk, send it anyway. If it moves us, we’ll publish it.</p>
-    <p><strong>Above all, we care about character.</strong> We want people who make us feel something—who love, lose, rage, and remember—while navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work.</p>
 
     <!-- Info Table -->
     <table style="width: 100%; border-collapse: collapse; margin-top: 2rem; max-width: 700px;">
