--- a/submit.html
+++ b/submit.html
@@ -212,7 +212,7 @@
   <!-- Fiction Guidelines Section -->
   <div id="fiction" style="text-align: left;">
  <h2 id="fiction" class="gradient-heading" style="margin-top: 3rem;">Fiction Guidelines</h2>
-    <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. We're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work.</p>
+    <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. In fiction, we're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work.</p>
     <p style="margin-top: -0.5rem;">That said, genre is a slippery thing. If your piece is strange, experimental, or sits on the edge of cyberpunk, send it anyway. If it moves us, we’ll publish it.</p>
 
     <!-- Info Table -->
