--- a/submit.html
+++ b/submit.html
@@ -231,7 +231,7 @@
       </tr>
     </table>
 
-    <p style="margin-top: 1.5rem;"><strong>No AI-generated or AI-assisted work will be accepted.</strong> We only want human-created fiction—your voice, your ideas, your originality.</p>
+    <p style="margin-top: 1.5rem;"><strong>No AI-generated or AI-assisted work will be accepted.</strong> We only want human-created fiction. There's irony somewhere in here.</p>
   </div>
 
   <!-- Art Guidelines Section -->
