--- a/submit.html
+++ b/submit.html
@@ -110,6 +110,13 @@
       -webkit-text-fill-color: transparent;
       margin-bottom: 1rem;
     }
+    .gradient-heading-blue {
+  font-size: 1.5rem;
+  background: linear-gradient(90deg, #0df6e3, #1e90ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 1rem;
+}
 
     .content p {
       line-height: 1.7;
@@ -211,7 +218,7 @@
 
   <!-- Fiction Guidelines Section -->
   <div id="fiction" style="text-align: left;">
- <h2 id="fiction" class="gradient-heading" style="margin-top: 3rem;">Fiction Guidelines</h2>
+<h2 id="fiction" class="gradient-heading-blue" style="margin-top: 3rem;">Fiction Guidelines</h2>
     <p>We’re excited about cyberpunk in all its forms—classic and modern, urban and off-world, sleek and gritty. In fiction, we're looking for what you'd expect; near-future worlds with corporate control, people altered by tech-implants, you get it. <strong>Above all however, we care about character.</strong> We want people who make us feel something while they're navigating whatever wild setting you’ve built. Human connection is what makes good cyberpunk work.</p>
     <p style="margin-top: -0.5rem;">That said, genre is a slippery thing. If your piece is strange, experimental, or sits on the edge of cyberpunk, send it anyway. If it moves us, we’ll publish it.</p>
 
@@ -236,7 +243,7 @@
 
   <!-- Art Guidelines Section -->
   <div id="art" style="text-align: left;">
-<h2 id="art" class="gradient-heading" style="margin-top: 4rem;">Art Guidelines</h2>
+<h2 id="art" class="gradient-heading-blue" style="margin-top: 4rem;">Art Guidelines</h2>
     <p>We’re accepting cyberpunk-themed visual art for digital publication. This includes illustration, digital collage, photography, animation stills, glitch art, or anything else that fits the tone of Burnline. We care more about the vibe than the medium.</p>
 
     <p><strong>How to Submit:</strong> Email <a href="mailto:contact@burnline.net" style="color: #0df6e3;">contact@burnline.net</a> with your artwork attached (JPG or PNG) or linked via portfolio or file share. Please include the word <strong>"Submission"</strong> in the subject line.</p>
